--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>if/else</title>
 </head>
 <body>
-    operador &&
+    operadoor &&
     <script src="index.js"></script>
 </body>
 </html>
